--- a/packages/ui/public/index.html
+++ b/packages/ui/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Flowise - LangchainJS UI</title>
+        <title>应用智造空间</title>
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <!-- Meta Tags-->
         <meta charset="utf-8" />
